--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="il.ac.huji.todolist.AddNewTodoItemActivity"
+            android:theme="@android:style/Theme.Dialog" 
+            android:label="@string/add_new_item_title" >
+        </activity>
+        
     </application>
 
 </manifest>
